# esp32-client-sdk

./: .gitmodules  README.md  sdkconfig.defaults
components/iota_c/: CMakeLists.txt
components/utf8proc/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  cli_node_events.c  cli_node_events.h  cli_restful.c  cli_restful.h  cli_sensor.c  cli_sensor.h  cli_system.c  cli_system.h  cli_wallet.c  cli_wallet.h  events_api.c  events_api.h  main.c
test/: test_main.c
